--- a/.github/workflows/dast-zap-full.yml
+++ b/.github/workflows/dast-zap-full.yml
@@ -46,7 +46,7 @@ jobs:
             sleep 2
           done
 
-      - name: Start app (container name: app)
+      - name: "Start app (container name: app)"
         run: |
           JAR="$(ls build/libs/*.jar | head -n1)"
           echo "Usando JAR: $JAR"
