--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -1,79 +1,94 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-# A sample workflow which sets up Snyk to analyze the full Snyk platform (Snyk Open Source, Snyk Code,
-# Snyk Container and Snyk Infrastructure as Code)
-# The setup installs the Snyk CLI - for more details on the possible commands
-# check https://docs.snyk.io/snyk-cli/cli-reference
-# The results of Snyk Code are then uploaded to GitHub Security Code Scanning
-#
-# In order to use the Snyk Action you will need to have a Snyk API token.
-# More details in https://github.com/snyk/actions#getting-your-snyk-token
-# or you can signup for free at https://snyk.io/login
-#
-# For more examples, including how to limit scans to only high-severity issues
-# and fail PR checks, see https://github.com/snyk/actions/
-
-name: Snyk Security
+name: SCA - Snyk
 
 on:
   push:
     branches: ["main", "CI-CD"]
   pull_request:
     branches: ["main"]
+  schedule:
+    - cron: "15 4 * * 4" # semanal (qui 04:15 UTC)
+  workflow_dispatch:
 
 permissions:
   contents: read
+  security-events: write  # pra subir SARIF
 
 jobs:
-  snyk:
-    permissions:
-      contents: read # for actions/checkout to fetch code
-      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
-      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+  snyk-sca:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up Snyk CLI to check for security issues
-        # Snyk can be used to break the build when it detects security issues.
-        # In this case we want to upload the SAST issues to GitHub Code Scanning
-        uses: snyk/actions/setup@806182742461562b67788a64410098c9d9b96adb
+      - name: Checkout
+        uses: actions/checkout@v4
 
-        # For Snyk Open Source you must first set up the development environment for your application's dependencies
-        # For example for Node
-        #- uses: actions/setup-node@v4
-        #  with:
-        #    node-version: 20
+      # Java p/ Gradle resolver deps
+      - name: Setup JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: "21"
 
+      # Snyk CLI
+      - name: Setup Snyk
+        uses: snyk/actions/setup@v4
         env:
-          # This is where you will need to introduce the Snyk API token created with your Snyk account
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
-        # Runs Snyk Code (SAST) analysis and uploads result into GitHub.
-        # Use || true to not fail the pipeline
-      - name: Snyk Code test
-        run: snyk code test --sarif > snyk-code.sarif # || true
+      # Se o Snyk precisar invocar ./gradlew p/ coletar a árvore de deps
+      - name: Make gradlew executable (and fix CRLF if any)
+        run: |
+          if [ -f gradlew ]; then
+            chmod +x ./gradlew
+            sed -i 's/\r$//' ./gradlew
+          fi
 
-        # Runs Snyk Open Source (SCA) analysis and uploads result to Snyk.
-      - name: Snyk Open Source monitor
-        run: snyk monitor --all-projects
+      # Varre TODOS os manifests do repo (Gradle/Maven/Node/etc), gera SARIF
+      - name: Snyk test (gera SARIF)
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        run: |
+          # SARIF p/ Code Scanning
+          snyk test \
+            --all-projects \
+            --detection-depth=4 \
+            --severity-threshold=high \
+            --sarif-file-output=snyk.sarif || true
 
-        # Runs Snyk Infrastructure as Code (IaC) analysis and uploads result to Snyk.
-        # Use || true to not fail the pipeline.
-      - name: Snyk IaC test and report
-        run: snyk iac test --report # || true
+          # JSON p/ gate de severidade
+          snyk test \
+            --all-projects \
+            --detection-depth=4 \
+            --severity-threshold=low \
+            --json-file-output=snyk.json || true
 
-        # Build the docker image for testing
-      - name: Build a Docker image
-        run: docker build -t your/image-to-test .
-        # Runs Snyk Container (Container and SCA) analysis and uploads result to Snyk.
-      - name: Snyk Container monitor
-        run: snyk container monitor your/image-to-test --file=Dockerfile
-
-        # Push the Snyk Code results into GitHub Code Scanning tab
-      - name: Upload result to GitHub Code Scanning
+      - name: Upload SARIF to Code Scanning
+        if: always()
         uses: github/codeql-action/upload-sarif@v3
         with:
-          sarif_file: snyk-code.sarif
+          sarif_file: snyk.sarif
+
+      # Gate: falha só se tiver High/Critical
+      - name: Ensure jq is available
+        run: |
+          if ! command -v jq >/dev/null; then
+            sudo apt-get update && sudo apt-get install -y jq
+          fi
+      - name: Gate por severidade (High/Critical)
+        run: |
+          test -f snyk.json || { echo "snyk.json não encontrado"; exit 1; }
+          HIGHS=$(jq '[.vulnerabilities[] | select(.severity=="high" or .severity=="critical")] | length' snyk.json)
+          echo "High/Critical encontrados: $HIGHS"
+          if [ "$HIGHS" -gt 0 ]; then
+            echo "Falhando pipeline por High/Critical."
+            exit 1
+          fi
+
+      # Snapshot no Snyk (apenas na main) pra histórico/alertas na UI
+      - name: Snyk monitor (main only)
+        if: github.ref == 'refs/heads/main'
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        run: |
+          snyk monitor --all-projects --detection-depth=4 \
+            --project-environment=github-actions --project-lifecycle=production || true
+
